--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "test:e2e": "node --loader ts-node/esm cypress.config.ts",
+    "test:e2e:ci": "cypress run --browser chrome",
+    "cypress:open": "node --loader ts-node/esm cypress.config.ts",
+    "cypress:run":  "node --loader ts-node/esm cypress.config.ts -- --headless"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.7",
@@ -43,14 +46,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
-    "@types/node": "^22.14.1",
+    "@types/node": "^22.15.21",
     "@types/react": "^19.1.1",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.3.4",
+    "cypress": "^14.4.0",
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^6.2.0"
   }
